k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doculume
  labels:
    name: doculume
    environment: production
